--- a/clase1.html
+++ b/clase1.html
@@ -6,7 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="clase5.js"></script>
+    <h1>Victor Hernandez</h1>
+    <script src="clase7.js"></script>
     
 </body>
 </html>
