--- a/clase1.html
+++ b/clase1.html
@@ -4,10 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+<style type="text/css">
+body {
+text-align: center;
+color: rgb(98, 226, 38);
+background-color: #07091aee }
+div{
+    border-radius: 3%;
+    font-size: larger;
+    background-color: rgb(44, 44, 104);
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
+</style>
 </head>
 <body>
     <h1>Victor Hernandez</h1>
-    <script src="clase10.js"></script>
-    
+    <div>
+    <h3>cada mañana tienes dos opciones: </h3>
+    <h2>seguir quejandote de la vida o hacer algo para cambiarla</h2>
+    <script src="clase12.js"></script>
+    </div>
 </body>
 </html>
